# Cellular-studio

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  CURRENT.md  README.md  __init__.py  batch_contract.py  pyproject.toml
adapters/: README.md
configs/: README.md
docs/: 01-需求文档.md  02-开发计划.md  03-协作与仓库规范.md  04-当前落成情况.md  05-组内共享部署与数据接入规范.md  06-后台逻辑与存储说明.md  07-仓库治理与 GitHub-服务器协作.md  08-reviewer-命名空间与多人标注汇总设计.md  09-reviewer-命名空间开发与验证计划.md  10-179服务器共享标注与开放协作方案.md  11-179服务器运行、权限与批次流转手册.md  12-179部署与共享标注实施计划.md  13-179方案-critique-refine-memo.md  14-179部署指南.md  15-179详细操作手册.md  16-快速接入指南.md  17-179首轮真实试运行记录.md  18-179试运行复盘与第二轮优化建议.md  19-异构多图层轨迹接入架构与Arena-V15适配.md  20-阶段性仓库代码架构体检与治理升级方案.md  21-用户自助上传与批次产品化升级规划.md  22-index前端模块化重构方案.md  23-index前端重构落地计划.md  24-20260420小版本更新与179重部署说明.md  25-分段标签Mock数据格式说明.md  26-分段标签数据接口说明-对外版.md  27-长期可维护性整改与轨迹标注平台升级总方案.md  28-轨迹编辑模式与严格分段导出技术规格.md  29-agent-native-cli.md  30-agent-native-cli-progress-report.md  31-agent-map-cli-review-report.md  32-studio-cli-development-plan.md  33-agent-review-progressive-memory.md  34-fmm-mainroad-weighted-mechanism.md  DOCS_MAINTENANCE.md  INDEX.md  README.md
reports/: studio_cli_10_track_annotation_report_20260503.md  studio_cli_multimode_labeling_report_20260506.md  studio_cli_system_report_20260503.md
scripts/: __init__.py  adapt_cellular_quality_batch.py  adapt_research_arena_tier_pair_batch.py  adapt_research_arena_v15_layers_batch.py  add_fake_gate_layer_to_signal_gps_batch.py  build_arena_jhy_review_batches.py  check_docs_entrypoints.py  check_index_html_inline_js.py  (+18 more)
(+96 files in other folders)
