[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trajectory-annotation-studio"
version = "0.1.0"
description = "Local stdlib-only trajectory review server baseline"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
studio-agent = "trajectory_annotation_studio.scripts.studio_agent_cli:main"
